<resources>
    <string name="app_name">playlistmaker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="hint_search">Поиск</string>
    <string name="clear_">Стереть</string>
    <string name="https_yandex_ru_practicum">https://yandex.ru/practicum</string>
    <string name="mailto_petya_07_yandex_ru">mailto:petya.07@yandex.ru</string>
    <string name="playlist_maker_message_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="https_yandex_ru_legal_practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_plain">text/plain</string>
    <string name="nothing_found">Ничего не найдено!</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="error_not_found">Ничего не нашлось</string>
    <string name="error_not_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="zaglushka">Заглушка</string>
    <string name="server_error_message">Ошибка сервера</string>
    <string name="refresh_button">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="menu_button">Назад в меню</string>
    <string name="_play_">Играть</string>
    <string name="add_To_Collection">Добавить в коллекцию</string>
    <string name="to_Favorites">В избранное</string>
    <string name="trackTimeMills">Длительность</string>
    <string name="collectionName">Альбом</string>
    <string name="releaseDate">Год</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="country">Страна</string>
    <string name="timer">00:00</string>
    <string name="media_library">Медиатека</string>
    <string name="no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="media_not_found">Ваша медиатека пуста</string>
    <string name="button_new_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="tab">tabLayout</string>
    <string name="button_back">Назад</string>
    <string name="textMediateka">Медиатека</string>
    <string name="text_Settings">Настройки</string>
    <string name="text_Search">Поиск</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="track_already_added">Трек уже добавлен в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tracks_count">%1$d %2$s</string>
    <string name="mailto">mailto:</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="description">Описание</string>
    <string name="title">Название*</string>
    <string name="imagePlaylist">imagePlaylist</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="newPlaylist">Новый плейлист</string>
</resources>