<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant">

    <TextView
        android:id="@+id/text_Settings"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_Settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/TextSettingsStyle"
            android:id="@+id/themeSwitcher"
            android:text="@string/dark_theme"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_share_app"
        android:text="@string/share_app"
        app:drawableRightCompat="@drawable/share"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button_write_support"
        android:text="@string/write_support"
        app:drawableRightCompat="@drawable/group"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/button_user_agreement"
        android:text="@string/user_agreement"
        app:drawableRightCompat="@drawable/forvard"
        style="@style/ButtonStyle"/>

</LinearLayout>