<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".search.ui.view.SearchFragment">

    <TextView
        android:id="@+id/text_Search"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/EditTextStyle"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@drawable/bg_rounded_corners"
            android:textCursorDrawable="@drawable/cursor"
            android:hint="@string/hint_search"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/search" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/clear_"
            android:src="@drawable/x" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvHistoryView"
        style="@style/historyViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/you_were_looking_for"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"/>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/placeholderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/zaglushka"
        android:src="@drawable/no_search"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/inputEditText" />

    <TextView
        android:id="@+id/placeholderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/error_not_found"
        android:textColor="?attr/colorButtonNormal"
        android:textSize="19sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/placeholderView" />

    <Button
        android:id="@+id/refrech_button"
        style="@style/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_vertical|center_horizontal"
        android:letterSpacing="0"
        android:text="@string/refresh_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderText" />

    <Button
        android:id="@+id/historyClearButton"
        style="@style/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/clear_history"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>
</LinearLayout>