<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_back"
        style="@style/ButtonSettingsStyle"
        android:layout_width="wrap_content"
        android:gravity="start"
        android:paddingTop="@dimen/paddingTop_14dp"
        android:text="@string/search"
        android:textSize="@dimen/text_Size_22sp"
        app:icon="@drawable/back"
        app:iconPadding="@dimen/iconPadding_28dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/EditTextStyle"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@drawable/bg_rounded_corners"
            android:hint="@string/hint_search"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/search" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/clear_"
            android:src="@drawable/x" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"/>

    <ImageView
        android:id="@+id/placeholderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/dark_mode_no_search"
        app:layout_constraintTop_toBottomOf="@+id/inputEditText"
        android:layout_marginTop="110dp"
        android:visibility="gone"
        android:contentDescription="@string/zaglushka" />

    <TextView
        android:id="@+id/placeholderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_not_found"
        app:layout_constraintTop_toBottomOf="@+id/placeholderView"
        android:gravity="center"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="19sp"
        android:textColor="?attr/colorButtonNormal"
        android:paddingTop="16dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/refrech_button"
        style="@style/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/placeholderText"
        android:text="@string/refresh_button"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/ys_display_medium"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:textAlignment="center"
        android:visibility="gone"
        />
</LinearLayout>