<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="18dp"
    android:orientation="vertical"
    android:background="@color/white">

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/white"
        android:drawablePadding="10dp"
        android:gravity="top"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="#1A1B22"
        android:textSize="22sp"
        app:icon="@drawable/back"
        app:iconTint="@color/black"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_16sp"/>


        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            android:layout_gravity="end"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:backgroundTint="@color/white"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_16sp"
        android:textAllCaps="false"
        app:drawableRightCompat="@drawable/share"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:backgroundTint="@color/white"
        android:text="@string/write_support"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_16sp"
        android:textAllCaps="false"
        app:drawableRightCompat="@drawable/group" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:backgroundTint="@color/white"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_16sp"
        android:layout_marginBottom="28dp"
        android:textAllCaps="false"
        app:drawableRightCompat="@drawable/forvard" />

</LinearLayout>